--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ${{ steps.tag_version.outputs.new_tag }}
-        name: Release ${{ steps.tag_version.outputs.new_tag }}
+        tags: ${{ steps.id.outputs.new_tag }}
+        name: Release ${{ steps.docker_build.outputs.new_tag }}
         body: ${{ steps.tag_version.outputs.changelog }}
