--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,4 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ${{ steps.id.outputs.new_tag }}
-        name: Release ${{ steps.docker_build.outputs.new_tag }}
-        body: ${{ steps.tag_version.outputs.changelog }}
+        tags: kordonny/flutter_web_container:latest
