--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
+  # http requires a dart sdk version >=3.3.0
   http: ^1.2.2
   provider: ^6.1.2
 
